# better-auth-py

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: health.yml
better_auth/: __init__.py  exceptions.py
better_auth/api/: __init__.py  client.py  server.py
better_auth/interfaces/: __init__.py  crypto.py  encoding.py  io.py  paths.py  storage.py
better_auth/messages/: __init__.py  access.py  account.py  authentication.py  creation.py  device.py  linking.py  message.py  recovery.py  refresh.py  request.py  response.py  rotation.py  session.py
examples/: server.py
examples/implementation/crypto/: __init__.py  entropy.py  secp256r1.py
examples/implementation/encoding/: __init__.py  base64.py  timestamper.py  token_encoder.py
examples/implementation/storage/: __init__.py  client.py  server.py  verification_key_store.py
tests/: test_api.py  test_token.py
tests/implementation/crypto/: __init__.py  blake3.py  entropy.py  hash.py  nonce.py  secp256r1.py
tests/implementation/encoding/: __init__.py  base64.py  identity.py  timestamper.py  token_encoder.py
tests/implementation/storage/: __init__.py  client.py  server.py
tests/integration/: __init__.py  test_integration.py
